--- a/src/app/shared/components/ui/modal/components/modal/modal.component.scss
+++ b/src/app/shared/components/ui/modal/components/modal/modal.component.scss
@@ -10,4 +10,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  &--top {
+    align-items: flex-start;
+  }
+
+  &--bottom {
+    align-items: flex-end;
+  }
 }
