--- a/src/app/shared/components/ui/tag/tag-input.component.html
+++ b/src/app/shared/components/ui/tag/tag-input.component.html
@@ -6,7 +6,13 @@
 >
   <div class="av-tag-input__container">
     @for (tag of tags(); track $index) {
-    <av-tag [label]="tag" [variant]="variant()" [removable]="!disabled()" (removed)="removeTag($index)"></av-tag>
+    <av-tag
+      [label]="tag"
+      [variant]="variant()"
+      [color]="color()"
+      [removable]="!disabled()"
+      (removed)="removeTag($index)"
+    ></av-tag>
     }
 
     <input
