--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -192,8 +192,8 @@ $z-index-notification: 1080;
 $border-width-base: 1px;
 $border-width-thick: 2px;
 
-$border-radius-sm: 2px;
-$border-radius-base: 4px;
+$border-radius-sm: 0;
+$border-radius-base: 0;
 $border-radius-lg: 8px;
 $border-radius-xl: 12px;
 $border-radius-round: 50%;
