fix: исправлено свойство width на avWidth в av-modal компоненте

--- a/src/app/pages/ui-demo/dialog-icon-ui/dialog-icon-ui.component.html
+++ b/src/app/pages/ui-demo/dialog-icon-ui/dialog-icon-ui.component.html
@@ -320,7 +320,7 @@
   <av-modal
     [(isOpen)]="isOpen"
     [size]="pgSize()"
-    [width]="pgWidth()"
+    [avWidth]="pgWidth()"
     [showBackdrop]="pgShowBackdrop()"
     [closeOnBackdrop]="pgCloseOnBackdrop()"
     [closeOnEsc]="pgCloseOnEsc()"
